Fixed paragraph icons distorted in modal popup issue.

--- a/scss/admin/layout_builder_modal.scss
+++ b/scss/admin/layout_builder_modal.scss
@@ -79,7 +79,8 @@
 }
 
 ul.paragraphs-add-dialog-list input.field-add-more-submit {
-  background: #d4d4d8;
+  background-color: #d4d4d8;
+  background-size: auto calc(100% - 20px);
   font-weight: 700;
   font-size: 1rem;
   border: none;
